<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/report_text"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/dashboard_color"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reportTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_text_title"
            android:textSize="9pt" />

        <EditText
            android:id="@+id/reportUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_username_hint"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/reportTypeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/report_text_typelist" />

        <EditText
            android:id="@+id/reportEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_text_hint"
            android:lines="5" />

        <CheckBox
            android:id="@+id/reportIfAnonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_text_ifAnonymous" />

        <CheckBox
            android:id="@+id/reportIfInformOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_text_informOthers" />

        <Button
            android:id="@+id/reportSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/click_button_color"
            android:drawableLeft="@drawable/ic_submit"
            android:onClick="submitReport"
            android:text="@string/submit"
            android:textSize="9pt" />
    </LinearLayout>

    <fragment
        android:id="@+id/buttonbar_fragment"
        android:name="org.vamosjuntos.juntos.ButtonbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>