<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <org.vamosjuntos.juntos.DashboardLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/bg_pic" >

        <Button
            android:id="@+id/btn_report_instance"
            style="@style/ReportButton"
            android:drawableTop="@drawable/btn_report_instance"
            android:text="@string/report_instance" />

        <Button
            android:id="@+id/btn_report_audio"
            style="@style/ReportButton"
            android:drawableTop="@drawable/btn_report_audio"
            android:text="@string/report_audio" />

        <Button
            android:id="@+id/btn_report_camera"
            style="@style/ReportButton"
            android:drawableTop="@drawable/btn_report_camera"
            android:text="@string/report_camera" />
    </org.vamosjuntos.juntos.DashboardLayout>

    <fragment
        android:id="@+id/buttonbar_fragment"
        android:name="org.vamosjuntos.juntos.ButtonbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>